tests/errors/range_as_value_err/range_as_value_err.c
#error range_as_value_err:7:27 PARSE ERROR: Expected ']' (7:27)
#error range_as_value_err:7:27 PARSE ERROR: Expected ')' (7:27)
#error range_as_value_err:7:30 PARSE ERROR: Expected an expression (7:30)
#error range_as_value_err:7:33 PARSE ERROR: Expected an expression (7:33)
#error range_as_value_err:9:3 PARSE ERROR: Expected an expression (9:3)
#error range_as_value_err:10:14 PARSE ERROR: Expected ']' (10:14)
#error range_as_value_err:10:14 PARSE ERROR: Expected 'with' (10:14)
#error range_as_value_err:10:17 PARSE ERROR: Expected an expression (10:17)
#error range_as_value_err:10:20 PARSE ERROR: Expected an expression (10:20)
#error range_as_value_err:10:20 PARSE ERROR: Expected eof (10:20)
